fixed MainMenu style: gap between boxes and scrollbar

--- a/ShopApplication/src/main/resources/css/MainMenu.css
+++ b/ShopApplication/src/main/resources/css/MainMenu.css
@@ -52,12 +52,10 @@
 }
 
 .scroll-pane .increment-button, .scroll-pane .decrement-button {
-    -fx-background-color: #29292D;
-    -fx-background-radius: 2em;
+    -fx-opacity: 0%;
 }
 
 .scroll-pane .scroll-bar:vertical {
-    -fx-background-color: #29292D;
     -fx-padding: 2 3 0 5;
 }
 
@@ -67,7 +65,7 @@
 }
 
 .scroll-pane .scroll-bar:vertical .thumb {
-    -fx-background-color: derive(color-1, 90%);
+    -fx-background-color: derive(#085de4, 70%);
     -fx-background-insets: 2, 0, 0;
     -fx-background-radius: 2em;
 }
